COM-2655 : stashing code for this. parked this task for now

--- a/stylesheets/modules/b2b-account/quotes.less
+++ b/stylesheets/modules/b2b-account/quotes.less
@@ -87,6 +87,10 @@
             .mz-product-picker-table {
                 width: 100%;
 
+                >tbody>tr>td{
+                    padding-bottom:20px;
+                }
+
                 .mz-l-formfieldgroup-halfsize {
                     width: 120px !important;
                     height: 28px !important;
